--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -2,7 +2,7 @@
     <header class="search-bar">
         <div class="con-search">
             <img class="searchIcon" src="searchIcon.svg" alt="">
-            <input class="search-input" type="text" class="form-control" name="address" placeholder="지하철">
+            <input class="search-input" autocomplete="none" type="text" class="form-control" name="address" placeholder="지하철">
             <img id="reset-button" class="xMark" src="xMark.svg" alt="" type="reset">
         </div>
         <button id="btn" class="search-btn" type="button">검색</button>
