--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -1,4 +1,4 @@
-body{
+body {
     margin: 0;
 
     -webkit-user-select: none;
@@ -31,7 +31,7 @@ input {
     top: 0;
     left: 0;
     position: absolute;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     box-shadow: 0 0 10px 2px gray;
     height: 100vh;
     width: 450px;
@@ -41,7 +41,7 @@ input {
     animation: all 0.5s ease;
 }
 
-.header-bar{
+.header-bar {
     position: relative;
     color: #8591ff;
     display: inline-block;
@@ -50,7 +50,7 @@ input {
     font-weight: bold;
     margin: 10px;
 }
-.header-hr{
+.header-hr {
     background-color: #8591ff;
 
     margin-top: -5px;
@@ -62,7 +62,7 @@ input {
     margin-bottom: 10px;
 }
 /* menu 내 {길찾기} {중간지점} {장소추천} {지하철} 선택 사항 */
-.nav-opt{
+.nav-opt {
     background-color: #b5b9ff;
     color: white;
     font-size: 14px;
@@ -83,13 +83,13 @@ input {
     justify-content: center;
     align-items: center;
 }
-.con-oth{
+.con-oth {
     /* border: 1px black solid; */
     display: inline-block;
     margin-right: 6px;
     float: right;
 }
-.nav-opt-other{
+.nav-opt-other {
     background-color: #b5b9ff;
     color: white;
     display: flex;
@@ -100,7 +100,9 @@ input {
     border-radius: 100%;
     cursor: pointer;
 }
-.nav-opt:hover, .nav-opt-other:hover, .search-btn:hover{
+.nav-opt:hover,
+.nav-opt-other:hover,
+.search-btn:hover {
     background-color: #8591ff;
     transition: 0.3s;
     cursor: pointer;
@@ -127,55 +129,51 @@ input {
 .folding-btn:hover {
     cursor: pointer;
 }
-.folding-btn div{
-
+.folding-btn div {
     height: 50px;
     margin-left: -5px;
     width: 5px;
 
-    background-color: #EEEEEE;
+    background-color: #eeeeee;
 }
 
 /* Main.css */
 
-
-  /* hidden 클래스를 추가하면 메뉴가 왼쪽으로 이동하여 숨깁니다. */
-  .menu.hidden {
+/* hidden 클래스를 추가하면 메뉴가 왼쪽으로 이동하여 숨깁니다. */
+.menu.hidden {
     transform: translateX(-100%);
-  }
+}
 
+/* __Mapping */
 
-
-  /* __Mapping */
-
-  .mapping-section.hidden{
+.mapping-section.hidden {
     z-index: -100;
     display: none;
-  }
-  .halfway-section.hidden{
+}
+.halfway-section.hidden {
     z-index: -100;
     display: none;
-  }
-  .subway-section.hidden{
+}
+.subway-section.hidden {
     z-index: -100;
     display: none;
-  }
+}
 
-  .on {
+.on {
     background-color: #8591ff;
-  }
+}
 
-  .con-main {
+.con-main {
     float: left;
-  }
-  .search-bar {
+}
+.search-bar {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  .search-input {
+}
+.search-input {
     border: none;
-    background-color: #EEEEEE;
+    background-color: #eeeeee;
     /* border-radius: 10px; */
 
     margin-top: 2px;
@@ -187,27 +185,26 @@ input {
     font-size: 20px;
 
     float: left;
-  }
-  .searchIcon{
+}
+.searchIcon {
     width: 20px;
     margin: 11.5px 15px;
 
     display: inline-block;
     float: left;
-  }
-  .con-search{
-    background-color: #EEEEEE;
+}
+.con-search {
+    background-color: #eeeeee;
     /* display: inline-block; */
-
 
     border-radius: 10px;
     margin-left: 20px;
-  }
-  .xMark{
+}
+.xMark {
     width: 25px;
     margin: 8.5px 15px;
-  }
-  .xMark:hover{
+}
+.xMark:hover {
     cursor: pointer;
 }
 .search-btn {
@@ -217,7 +214,7 @@ input {
 
     border: none;
     background-color: #b5b9ff;
-    color: #FFFFFF;
+    color: #ffffff;
 
     padding: 5px 10px;
     border-radius: 10px;
@@ -234,3 +231,34 @@ input {
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
+/* #region 근처 장소  */
+#radio_cont {
+    width: 90%;
+    margin: 0 auto;
+}
+
+#radio_flax {
+    display: flex;
+}
+
+#radio_flax > label {
+    flex: 1px;
+    border: solid #8591ff 2px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+#radio_flax > label > input {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
+    -ms-appearance: none;
+}
+
+.selected {
+    background-color: #8591ff;
+}
+
+/* #endregion 근처 장소  */
