--- a/views/Post.ejs
+++ b/views/Post.ejs
@@ -26,9 +26,10 @@
             <br>
             <form action="/post" method="post">
                 <div class="form-group">
+                    
                     <label for="updnLine">방향</label>
-                    <input type="radio" name="Up" id="U" value="U" checked>상행
-                    <input type="radio" name="Down" id="D" value="D">하행
+                    <input type="radio" name="Up" id="1" value="1" checked>상행
+                    <input type="radio" name="Down" id="2" value="2">하행
                     <select name="SubwayLine" id="SubwayLine">
                         <option value="1호선" selected>1호선</option>
                         <option value="2호선">2호선</option>
