--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -73,6 +73,7 @@
             <div class="halfway-section hidden"><%- include('./__Halfway') %></div>
             <div class="subway-section hidden"><%- include('./__Subway') %></div>
         </section>
+        <%- include('./__Help') %>
         <div id="map"></div>
     </body>
     <script src="Main.js"></script>
