--- a/views/__Help.ejs
+++ b/views/__Help.ejs
@@ -1,3 +1,89 @@
-<div class="bg-blur">
-    
+<div class="bg-blur hidden pos">
+    <!-- #region 본문1 팀소개 -->
+    <div class="X-btn">
+        <div>
+            <div class="close-container">
+                <div class="leftright"></div>
+                <div class="rightleft"></div>
+                <label class="close">close</label>
+            </div>
+        </div>
+    </div>
+    <div class="w_textBox">
+        <div class="mainText_Title">
+            <h1>팀소개</h1>
+            <p>#해시테그1</p>
+            <p>#해시테그2</p>
+        </div>
+
+        <div id="mainText1_flex">
+            <div>
+                <div class="profile_card">
+                    <div class="gradient_filter"></div>
+                    <img src="ch_img1.jpg" alt="" />
+                    <div class="img_cont">
+                        <h3>김현우 <span>backend</span></h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>skill : html, css, js, node.js</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="profile_card">
+                    <div class="gradient_filter"></div>
+                    <img src="ch_img2.jpg" alt="" />
+                    <div class="img_cont">
+                        <h2>김현우 <span>backend</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>skill : html, css, js, node.js</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="profile_card">
+                    <div class="gradient_filter"></div>
+                    <img src="ch_img3.jpg" alt="" />
+                    <div class="img_cont">
+                        <h2>김현우 <span>backend</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>skill : html, css, js, node.js</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="profile_card">
+                    <div class="gradient_filter"></div>
+                    <img src="ch_img4.jpg" alt="" />
+                    <div class="img_cont">
+                        <h2>김현우 <span>backend</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>skill : html, css, js, node.js</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="profile_card">
+                    <div class="gradient_filter"></div>
+                    <img src="ch_img5.png" alt="" />
+                    <div class="img_cont">
+                        <h2>김현우 <span>backend</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>skill : html, css, js, node.js</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="profile_card">
+                    <div class="gradient_filter"></div>
+                    <img src="ch_img6.jpg" alt="" />
+                    <div class="img_cont">
+                        <h2>김현우 <span>backend</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>skill : html, css, js, node.js</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- #endregion 본문1 팀소개 -->
 </div>
