--- a/views/__Help.ejs
+++ b/views/__Help.ejs
@@ -12,8 +12,10 @@
     <div class="w_textBox">
         <div class="mainText_Title">
             <h1>팀소개</h1>
-            <p>#해시테그1</p>
-            <p>#해시테그2</p>
+            <h3>SKHU ROAD는 성공회대학교 교내대회 출품작입니다.</h3>
+            <h3>길찾기 서비스와 중간지점 찾기, 지하철 지연 서비스 등 더 많은 대중교통 관련 서비스를 지원합니다.</h3>
+            <p>#SKHU ROAD</p>
+            <p>#발전된 지도 서비스</p>
         </div>
 
         <div id="mainText1_flex">
@@ -84,6 +86,7 @@
                 </div>
             </div>
         </div>
+        <br /><br />
     </div>
     <!-- #endregion 본문1 팀소개 -->
 </div>
