--- a/views/__Mapping.ejs
+++ b/views/__Mapping.ejs
@@ -1,12 +1,15 @@
 <main class="con-main">
     <header class="search-bar">
+    <form action="/destination" method="post">
         <div class="con-search">
             <img class="searchIcon" src="searchIcon.svg" alt="">
             <input class="search-input" autocomplete="none" type="text" class="form-control" name="address" placeholder="위치 검색">
             <img id="reset-button" class="xMark" src="xMark.svg" alt="" type="reset">
         </div>
         <button id="btn" class="search-btn" type="button">검색</button>
+    </form>
     </header>
+    <!--
     <div class="btn-group" role="group">
         <label class="suggest-radio"> <input type="radio" name="option" value="convenience_store"/>편의점 </label>
         <label class="suggest-radio"> <input type="radio" name="option" value="cafe" />카페 </label>
@@ -14,6 +17,16 @@
         <label class="suggest-radio"> <input type="radio" name="option" value="bus_station" />버스 </label>
         <label class="suggest-radio"> <input type="radio" name="option" value="restaurant" />음식점 </label>
         <label class="suggest-radio"> <input type="radio" name="option" value="library" />도서관 </label>
+    </div>
+    -->
+    <br /><br />
+    <div class="container">
+        <h1>최근 검색 기록</h1>
+        <ol class="list-group">
+            <%Data.forEach((item, idx) => { %>
+            <li class="list-group-item"><%= idx + 1 %>. <%= item %></li>
+            <% }); %>
+        </ol>
     </div>
 </main>
 <script src="Mapping.js"></script>
