준혁준혁아
이게 므슨 말이니.....

--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -9,7 +9,7 @@
         <title>SKHU ROAD</title>
     </head>
     <body>
-        <section class="menu" id="menuSex">
+        <section class="menu">
             <div class="folding-btn">
                 <div></div>
             </div>
