X버튼 활성화
X이미지 클릭 시 textInput 내용이 지워짐

+img 태그의 reset-button에 alt값 추가

--- a/views/__Mapping.ejs
+++ b/views/__Mapping.ejs
@@ -12,8 +12,8 @@
     <header class="search-bar">
         <div class="con-search">
             <img class="searchIcon" src="searchIcon.svg" alt="">
-            <input class="search-input" autocomplete="none" type="text" class="form-control" name="address" placeholder="위치 검색">
-            <img id="reset-button" class="xMark" src="xMark.svg" alt="" type="reset">
+            <input class="search-input" autocomplete="none" type="text" id="textInput" class="form-control" name="address" placeholder="위치 검색">
+            <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기">
         </div>
         <button id="btn" class="search-btn" type="button">검색</button>
     </header>
