Update Main.css .con-oth
-사용자가 클릭을 원활하게 할 수 있게 하기 위해 ?와 ! 셀을 분리 후, 간격을 조절하여 좀 더 가운데로 이동 시킴

+근데 이거 아이콘을 살짝 더 크게 하는 것도 좋을 것 같은데 아이콘 자체가 작아서 클릭하는데 불편할 수 도 있을 듯

--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -99,7 +99,10 @@ input[type="radio"] {
     /* border: 1px black solid; */
     display: inline-block;
     margin-right: 6px;
+    transform: scaleY(1); /* 원하는 수치로 높이 조절 가능 현재 기본 수치 */
     float: right;
+    border-collapse: separate; /* 테이블 셀을 분리하도록 설정 */
+    border-spacing: 8px; /* 원하는 간격으로 조절 */
 }
 
 .nav-opt-other {
