--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -63,9 +63,8 @@
             <div class="halfway-section hidden"><%- include('./__Halfway') %></div>
             <div class="subway-section hidden"><%- include('./__Subway') %></div>
         </section>
-        <%- include('./__Help') %>
+        <%- include('./__Info') %>
         <div id="map"></div>
     </body>
     <script src="Main.js"></script>
-    <script src="help.js"></script>
 </html>
