--- a/views/__Mapping.ejs
+++ b/views/__Mapping.ejs
@@ -11,11 +11,12 @@
     </div>
     <header class="search-bar">
         <div class="con-search">
-            <img class="searchIcon" src="searchIcon.svg" alt="">
-            <input class="search-input" autocomplete="none" type="text" id="textInput" class="form-control" name="address" placeholder="위치 검색">
-            <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기">
+            <img class="searchIcon" src="searchIcon.svg" alt="" />
+            <input class="search-input" autocomplete="none" type="text" id="textInput" class="form-control" name="address" placeholder="위치 검색" />
+            <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" />
         </div>
         <button id="btn" class="search-btn" type="button">검색</button>
     </header>
+    <div id="form_control_text"><div></div></div>
 </main>
 <script src="Mapping.js"></script>
