--- a/views/__Halfway.ejs
+++ b/views/__Halfway.ejs
@@ -1,4 +1,4 @@
-<main class="con-main">
+<main class="con-main-halfway">
     <div id="radio_cont">
         <div id="radio_flax">
             <label class="radio-label"> <input type="radio" name="option" value="convenience_store" />편의점 </label>
@@ -9,13 +9,33 @@
             <label class="radio-label"> <input type="radio" name="option" value="library" />도서관 </label>
         </div>
     </div>
-    <header class="search-bar">
-        <div class="con-search">
+    <div class="way-list">
+        <header class="search-bar">
+            <div class="con-search">
+                <img class="searchIcon" src="searchIcon.svg" alt="">
+                <input class="search-input" autocomplete="none" type="text" id="textInput" class="form-control"
+                    name="address" placeholder="지점 1">
+                <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기">
+            </div>
+            <button id="mid_btn" class="search-btn" type="button">찾기</button>
+        </header>
+        <div class="con-search way">
             <img class="searchIcon" src="searchIcon.svg" alt="">
-            <input class="search-input" autocomplete="none" type="text" id="textInput" class="form-control" name="address" placeholder="중간 지점">
+            <input class="search-input" autocomplete="none" type="text" id="textInput" class="form-control"
+                name="address" placeholder="지점 2">
             <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기">
         </div>
-        <button id="btn" class="search-btn" type="button">검색</button>
-    </header>
+        <div class="search-bar">
+            <div class="con-search way">
+                <img class="searchIcon" src="searchIcon.svg" alt="">
+                <input class="search-input" autocomplete="none" type="text" id="textInput" class="form-control"
+                    name="address" placeholder="지점 3">
+                <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기">
+            </div>
+            <button id="" class="remove-btn" type="button">삭제</button>
+        </div>
+        
+    </div>
+    <button class="add-address" type="button">+</button>
 </main>
-<script src="Mapping.js"></script>
+<script src="Halfway.js"></script>
