--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -2,19 +2,59 @@
     <header class="search-bar">
         <div class="con-search">
             <img class="searchIcon" src="searchIcon.svg" alt="">
-            <input class="search-input" autocomplete="none" type="text" class="form-control" name="address" placeholder="지하철">
+            <input class="search-input" autocomplete="none" type="text" class="form-control" name="address" placeholder="역 검색">
             <img id="reset-button" class="xMark" src="xMark.svg" alt="" type="reset">
         </div>
         <button id="btn" class="search-btn" type="button">검색</button>
     </header>
-    <form>
+    <article class="subway-con">
+        <div style="text-align: left; padding: 10px 22px;">
+            <form style="display: inline-block;">
+                <select id="subwayLine" style="font-size: 20px;">
+                    <option value="line1">1호선</option>
+                    <option value="line2">2호선</option>
+                    <option value="line3">3호선</option>
+                </select>
+            </form>
+            <form style="display: inline-block;">
+                <select style="font-size: 20px;">
+                    <option value="line1">상행</option>
+                    <option value="line2">하행</option>
+                </select>
+            </form>
+        </div>
+
+        <div class="subway-line1 lineNum_1"></div>
+
+        <div class="subway-line-con lineNum_1">
+            <div class="line-info">
+                호선 정보
+            </div>
+            <div class="station-info">
+                현재 역
+            </div>
+            <div class="subway-num">
+                열차 번호
+            </div>
+        </div>
+
+        <div class="subway-line2 lineNum_1">
+            행선지
+        </div>
+    </article>
+    <div class="subway-time-info">
+        <div>조회 시간 : </div>
+        <div>지연 시간 : </div>
+    </div>
+    <br>
+    <!-- <form style="display: block;">
         <form>
             <label for="subwayLine">호선 선택:</label>
             <select id="subwayLine">
                 <option value="line1">1호선</option>
                 <option value="line2">2호선</option>
                 <option value="line3">3호선</option>
-                <!-- 여기에 다른 호선들 추가 예정 -->
+                여기에 다른 호선들 추가 예정
             </select>
             <br>
             <button type="button" onclick="getSubwayTime()">조회</button>
@@ -23,6 +63,6 @@
         <div>열차 번호</div>
         <div>지연 정보</div>
         <div id="result"></div>
-    </form>
+    </form> -->
 </main>
 <script src="Mapping.js"></script>
