지하철 노선도 출력 및 메뉴 이동시 지도 표시 변환기능 추가

--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -415,3 +415,10 @@ input[type="radio"] {
 }
 
 /* #endregion 근처 장소  */
+.hidden {
+    display:none;
+}
+
+#image-display {
+    position:absolute;
+}
