--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -67,5 +67,6 @@
         <%- include('./__Info') %> <%- include('./__Explanation') %>
         <div id="map" style="z-index: 0"></div>
     </body>
+    <img src="smap_sg_all.png" id="image-display">
     <script src="Main.js"></script>
 </html>
