folding버튼 기능 수정

--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -415,8 +415,8 @@ input[type="radio"] {
 }
 
 /* #endregion 근처 장소  */
-.hidden {
-    display: hidden;
+.hiddenMap {
+    display: none;
 }
 
 #image-display {
