--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -1,9 +1,9 @@
 <main class="con-main">
     <header class="search-bar">
         <div class="con-search">
-            <img class="searchIcon" src="searchIcon.svg" alt="">
-            <input class="search-input" autocomplete="none" type="text" class="form-control" name="address" placeholder="역 검색">
-            <img id="reset-button" class="xMark" src="xMark.svg" alt="" type="reset">
+            <img class="searchIcon" src="searchIcon.svg" alt="">    
+            <input class="search-input" autocomplete="off" id="station" type="text" class="form-control" name="address" placeholder="역 검색">
+            <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" type="reset">
         </div>
         <button id="btn" class="search-btn" type="button">검색</button>
     </header>
@@ -11,9 +11,16 @@
         <div style="text-align: left; padding: 10px 22px;">
             <form style="display: inline-block;">
                 <select id="subwayLine" style="font-size: 20px;">
-                    <option value="line1">1호선</option>
-                    <option value="line2">2호선</option>
-                    <option value="line3">3호선</option>
+                    <option value="1호선">1호선</option>
+                    <option value="2호선">2호선</option>
+                    <option value="3호선">3호선</option>
+                    <option value="4호선">4호선</option>
+                    <option value="5호선">5호선</option>
+                    <option value="6호선">6호선</option>
+                    <option value="7호선">7호선</option>
+                    <option value="8호선">8호선</option>
+                    <option value="9호선">9호선</option>
+                    <option value="경의중앙선">경의중앙선</option>
                 </select>
             </form>
             <form style="display: inline-block;">
