--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -368,18 +368,116 @@ input[type="radio"] {
 /* 호선 별 색깔 style */
 /* 1호선 */
 .subway-line-con.lineNum_1 {
-    border: 15px solid #26446F;
+    border: 15px solid #005BAC;
 }
 .subway-line1.lineNum_1, .subway-line2.lineNum_1 {
-    background-color: #26446F;
+    background-color: #005BAC;
 }
 
 /* 2호선 */
 .subway-line-con.lineNum_2 {
-    border: 15px solid #00A93F;
+    border: 15px solid #00A84D;
 }
 .subway-line1.lineNum_2, .subway-line2.lineNum_2{
-    background-color: #00A93F;
+    background-color: #00A84D   ;
+}
+/* 3호선 */
+.subway-line-con.lineNum_3 {
+    border: 15px solid #EF7C1C;
+}
+.subway-line1.lineNum_3, .subway-line2.lineNum_3{
+    background-color: #EF7C1C;
+}
+/* 4호선 */
+.subway-line-con.lineNum_4 {
+    border: 15px solid #00B2E3;
+}
+.subway-line1.lineNum_4, .subway-line2.lineNum_4{
+    background-color: #00B2E3;
+}
+/* 5호선 */
+.subway-line-con.lineNum_5 {
+    border: 15px solid #996CAC;
+}
+.subway-line1.lineNum_5, .subway-line2.lineNum_5{
+    background-color: #996CAC;
+}
+/* 6호선 */
+.subway-line-con.lineNum_6 {
+    border: 15px solid #CD7C2F;
+}
+.subway-line1.lineNum_6, .subway-line2.lineNum_6{
+    background-color: #CD7C2F;
+}
+/* 7호선 */
+.subway-line-con.lineNum_7 {
+    border: 15px solid #747F00;
+}
+.subway-line1.lineNum_7, .subway-line2.lineNum_7{
+    background-color: #747F00;
+}
+/* 8호선 */
+.subway-line-con.lineNum_8 {
+    border: 15px solid #E6186C;
+}
+.subway-line1.lineNum_8, .subway-line2.lineNum_8{
+    background-color: #E6186C;
+}
+/* 9호선 */
+.subway-line-con.lineNum_9 {
+    border: 15px solid #BDB092;
+}
+.subway-line1.lineNum_9, .subway-line2.lineNum_9{
+    background-color: #BDB092;
+}
+/* 경의중앙선 */
+.subway-line-con.lineNum_gj {
+    border: 15px solid #77C4A3;
+}
+.subway-line1.lineNum_gj, .subway-line2.lineNum_gj{
+    background-color: #77C4A3;
+}
+/* 경춘선 */
+.subway-line-con.lineNum_gc {
+    border: 15px solid #178C72;
+}
+.subway-line1.lineNum_gc, .subway-line2.lineNum_gc{
+    background-color: #178C72;
+}
+/* 공항철도 */
+.subway-line-con.lineNum_ar {
+    border: 15px solid #0090D2;
+}
+.subway-line1.lineNum_ar, .subway-line2.lineNum_ar{
+    background-color: #0090D2;
+}
+/* 서해선 */
+.subway-line-con.lineNum_sh {
+    border: 15px solid #8FC31F;
+}
+.subway-line1.lineNum_sh, .subway-line2.lineNum_sh{
+    background-color: #8FC31F;
+}
+/* 수인분당선*/
+.subway-line-con.lineNum_sb {
+    border: 15px solid #FABE00;
+}
+.subway-line1.lineNum_sb, .subway-line2.lineNum_sb{
+    background-color: #FABE00;
+}
+/* 신분당선*/
+.subway-line-con.lineNum_ssb {
+    border: 15px solid #D31145;
+}
+.subway-line1.lineNum_ssb, .subway-line2.lineNum_ssb{
+    background-color: #D31145;
+}
+/* 우이신설선*/
+.subway-line-con.lineNum_ui {
+    border: 15px solid #B7C450;
+}
+.subway-line1.lineNum_ui, .subway-line2.lineNum_ui{
+    background-color: #B7C450;
 }
 
 /* __Help */
