--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -5,11 +5,11 @@
             <input class="search-input" autocomplete="off" id="station" type="text" class="form-control" name="address" placeholder="역 검색">
             <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" type="reset">
         </div>
-        <button id="btn" class="search-btn" type="button">검색</button>
+        <button id="btn" class="search-btn" type="submit">검색</button>
     </header>
     <article class="subway-con">
         <div style="text-align: left; padding: 10px 22px;">
-            <form style="display: inline-block;">
+            <form style="display: inline-block;" method="post">
                 <select id="subwayLine" style="font-size: 20px;">
                     <option value="1호선">1호선</option>
                     <option value="2호선">2호선</option>
@@ -21,19 +21,23 @@
                     <option value="8호선">8호선</option>
                     <option value="9호선">9호선</option>
                     <option value="경의중앙선">경의중앙선</option>
+                    <option value="경춘선">경춘선</option>
+                    <option value="수인분당선">수인분당선</option>
+                    <option value="서해선">서해선</option>
+                    <option value="신분당선">신분당선</option>
+                    <option value="우이신설선">우이신설선</option>
                 </select>
             </form>
-            <form style="display: inline-block;">
+            <form style="display: inline-block; " >
                 <select style="font-size: 20px;">
-                    <option value="line1">상행</option>
-                    <option value="line2">하행</option>
+                    <option value="1">상행</option>
+                    <option value="2">하행</option>
                 </select>
             </form>
         </div>
+        <div class="subway-line1 lineNum_3"></div>
 
-        <div class="subway-line1 lineNum_1"></div>
-
-        <div class="subway-line-con lineNum_1">
+        <div class="subway-line-con lineNum_3">
             <div class="line-info">
                 호선 정보
             </div>
@@ -45,7 +49,7 @@
             </div>
         </div>
 
-        <div class="subway-line2 lineNum_1">
+        <div class="subway-line2 lineNum_3">
             행선지
         </div>
     </article>
@@ -72,4 +76,4 @@
         <div id="result"></div>
     </form> -->
 </main>
-<script src="Mapping.js"></script>
+<script src="Subway.js"></script>
