지하철 노선도 출력 수정

--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -67,6 +67,7 @@
         <%- include('./__Info') %> <%- include('./__Explanation') %>
         <div id="map" style="z-index: 0"></div>
     </body>
-    <img src="smap_sg_all.png" id="image-display">
+    <img src="smap_sg_all.png" id="image-display" width="100%" height="100%">
     <script src="Main.js"></script>
 </html>
+
