--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -67,7 +67,7 @@
         <%- include('./__Info') %> <%- include('./__Explanation') %>
         <div id="map" style="z-index: 0"></div>
     </body>
-    <img src="subway_photo.jpg" id="image-display" width="100%" height="100%">
+    <img src="subway_photo.jpg" id="image-display" class="hiddenMap" width="100%" height="100%">
     <script src="Main.js"></script>
 </html>
 
