--- a/views/__Explanation.ejs
+++ b/views/__Explanation.ejs
@@ -1,4 +1,5 @@
 <div class="bg_panel set_opacity">
+    <div class="close_panel"></div>
     <div class="ex_X-btn">
         <div>
             <div class="ex_close-container">
