--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -1,8 +1,8 @@
 <main class="con-main">
     <header class="search-bar">
         <div class="con-search">
-            <img class="searchIcon" src="searchIcon.svg" alt="">    
-            <input class="search-input" autocomplete="off" id="station" type="text" class="form-control" name="address" placeholder="역 검색">
+            <img class="searchIcon" src="searchIcon.svg" alt="">
+            <input class="search-input" autocomplete="off" id="station" type="text" class="form-control" name="address" placeholder="역 검색" onkeyup="printName()">
             <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" type="reset">
         </div>
         <button id="btn" class="search-btn" type="submit">검색</button>
@@ -10,22 +10,22 @@
     <article class="subway-con">
         <div style="text-align: left; padding: 10px 22px;">
             <form style="display: inline-block;" method="post">
-                <select id="subwayLine" style="font-size: 20px;">
-                    <option value="1호선">1호선</option>
-                    <option value="2호선">2호선</option>
-                    <option value="3호선">3호선</option>
-                    <option value="4호선">4호선</option>
-                    <option value="5호선">5호선</option>
-                    <option value="6호선">6호선</option>
-                    <option value="7호선">7호선</option>
-                    <option value="8호선">8호선</option>
-                    <option value="9호선">9호선</option>
-                    <option value="경의중앙선">경의중앙선</option>
-                    <option value="경춘선">경춘선</option>
-                    <option value="수인분당선">수인분당선</option>
-                    <option value="서해선">서해선</option>
-                    <option value="신분당선">신분당선</option>
-                    <option value="우이신설선">우이신설선</option>
+                <select id="subwayLine" style="font-size: 20px;" onkeyup="handleOnChange(this)">
+                    <option value="1호">1호선</option>
+                    <option value="2호">2호선</option>
+                    <option value="3호">3호선</option>
+                    <option value="4호">4호선</option>
+                    <option value="5호">5호선</option>
+                    <option value="6호">6호선</option>
+                    <option value="7호">7호선</option>
+                    <option value="8호">8호선</option>
+                    <option value="9호">9호선</option>
+                    <option value="경의중앙">경의중앙선</option>
+                    <option value="경춘">경춘선</option>
+                    <option value="수인분당">수인분당선</option>
+                    <option value="서해">서해선</option>
+                    <option value="신분당">신분당선</option>
+                    <option value="우이신설">우이신설선</option>
                 </select>
             </form>
             <form style="display: inline-block; " >
@@ -38,11 +38,11 @@
         <div class="subway-line1 lineNum_3"></div>
 
         <div class="subway-line-con lineNum_3">
-            <div class="line-info">
+            <div class="line-info" id="line-inf">
                 호선 정보
             </div>
-            <div class="station-info">
-                현재 역
+            <div id="station-info" class="station-info">
+                역
             </div>
             <div class="subway-num">
                 열차 번호
