--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -1,16 +1,16 @@
 <main class="con-main">
-    <header class="search-bar">
-        <div class="con-search">
-            <img class="searchIcon" src="searchIcon.svg" alt="">    
-            <input class="search-input" autocomplete="off" id="station" type="text" class="form-control" name="address" placeholder="역 검색">
-            <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" type="reset">
+    <form style="display: inline-block;" id="SubwayForm" method="post" action="/Subway">
+        <div class="search-bar">
+            <div class="con-search">
+                <img class="searchIcon" src="searchIcon.svg" alt="">
+                <input class="search-input" autocomplete="off" id="station" type="text" class="form-control" placeholder="역 검색">
+                <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" type="reset">
+            </div>
+            <button class="search-btn" type="submit">검색</button>
         </div>
-        <button id="btn" class="search-btn" type="submit">검색</button>
-    </header>
-    <article class="subway-con">
-        <div style="text-align: left; padding: 10px 22px;">
-            <form style="display: inline-block;" method="post">
-                <select id="subwayLine" style="font-size: 20px;">
+        <div class="subway-con">
+            <div style="text-align: left; padding: 10px 22px;">
+                <select id="SubwayLine" style="font-size: 20px;" name="subwayLine">
                     <option value="1호선">1호선</option>
                     <option value="2호선">2호선</option>
                     <option value="3호선">3호선</option>
@@ -27,93 +27,32 @@
                     <option value="신분당선">신분당선</option>
                     <option value="우이신설선">우이신설선</option>
                 </select>
-            </form>
-            <form style="display: inline-block; " >
-                <select id="updnLine" style="font-size: 20px;">
+            </div>
+            <div style="text-align: left; padding: 10px 22px;">
+                <select id="updnLine" style="font-size: 20px;" name="updnLine">
                     <option value="1">상행</option>
                     <option value="2">하행</option>
                 </select>
-            </form>
+            </div>
         </div>
-        <div class="subway-line1 lineNum_3"></div>
+    </form>
+    <div class="subway-line1 lineNum_3"></div>
 
-        <div class="subway-line-con lineNum_3">
-            <div class="line-info">
-                호선 정보
-            </div>
-            <div class="station-info">
-                현재 역
-            </div>
-            <div class="subway-num">
-                열차 번호
-            </div>
+    <div class="subway-line-con lineNum_3">
+        <div class="line-info">
+            호선 정보
         </div>
-
-        <div class="subway-line2 lineNum_3">
-            행선지
+        <div class="station-info">
+            현재 역
         </div>
-    </article>
-    <div class="subway-time-info">
-        <div>조회 시간 : </div>
-        <div>지연 시간 : </div>
+        <div class="subway-num">
+            열차 번호
+        </div>
     </div>
-    <br>
-</main>
-<script src="Subway.js"></script>
 
-<main class="con-main">
-    <header class="search-bar">
-        <option value="1호선">1호선</option>
-                    <option value="2호선">2호선</option>
-                    <option value="3호선">3호선</option>
-                    <option value="4호선">4호선</option>
-                    <option value="5호선">5호선</option>
-                    <option value="6호선">6호선</option>
-                    <option value="7호선">7호선</option>
-                    <option value="8호선">8호선</option>
-                    <option value="9호선">9호선</option>
-                    <option value="경의중앙선">경의중앙선</option>
-                    <option value="경춘선">경춘선</option>
-                    <option value="수인분당선">수인분당선</option>
-                    <option value="서해선">서해선</option>
-                    <option value="신분당선">신분당선</option>
-                    <option value="우이신설선">우이신설선</option>
-    </header>
-    <article class="subway-con">
-        <div style="text-align: left; padding: 10px 22px;">
-            <form style="display: inline-block;" method="post">
-                <option value="1">상행</option>
-                <option value="2">하행</option>
-            </form>
-        </div>
-
-        <!-- 이 아래로 추가된 코드입니다 -->
-        <div class="result-info">
-            <% if(resultData) { %>
-                <span>열차 번호:</span> <%= resultData.btrainNo %><br>
-                <span>열차 방향:</span> <%= resultData.trainLineNm %><br>
-                <span>열차 위치:</span> <%= resultData.arvlMsg2 %><br>
-            <% } %>
-        </div>
-
-        <div class="subway-line1 lineNum_3"></div>
-
-        <div class="subway-line-con lineNum_3">
-            <div class="line-info">
-                호선 정보
-            </div>
-            <div class="station-info">
-                현재 역
-            </div>
-            <div class="subway-num">
-                열차 번호
-            </div>
-        </div>
-
-        <div class="subway-line2 lineNum_3">
-            행선지
-        </div>
-    </article>
+    <div class="subway-line2 lineNum_3">
+        행선지
+    </div>
     <div class="subway-time-info">
         <div>조회 시간 : </div>
         <div>지연 시간 : </div>
