--- a/views/__Halfway.ejs
+++ b/views/__Halfway.ejs
@@ -9,7 +9,7 @@
             <label class="radio-label"> <input type="radio" name="option" value="library" />도서관 </label>
         </div>
     </div>
-    <div class="way-list">
+    <div>
         <header class="search-bar">
             <div class="con-search">
                 <img class="searchIcon" src="searchIcon.svg" alt="" />
@@ -40,7 +40,10 @@
                 />
                 <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" />
             </div>
-            <button id="" class="remove-btn" type="button">삭제</button>
+            <button id="" class="remove-btn remove-address" type="button">삭제</button>
+        </div>
+        <div class="way-list">
+
         </div>
     </div>
     <button class="add-address" type="button">+</button>
