--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -1,16 +1,16 @@
 <main class="con-main">
     <header class="search-bar">
         <div class="con-search">
-            <img class="searchIcon" src="searchIcon.svg" alt="">    
-            <input class="search-input" autocomplete="off" id="station" type="text" class="form-control" name="address" placeholder="역 검색">
-            <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" type="reset">
+            <img class="searchIcon" src="searchIcon.svg" alt="" />
+            <input class="search-input" autocomplete="off" id="station" type="text" class="form-control" name="address" placeholder="역 검색" />
+            <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" type="reset" />
         </div>
         <button id="btn" class="search-btn" type="submit">검색</button>
     </header>
     <article class="subway-con">
-        <div style="text-align: left; padding: 10px 22px;">
-            <form style="display: inline-block;" method="post">
-                <select id="subwayLine" style="font-size: 20px;">
+        <div style="text-align: left; padding: 10px 22px">
+            <form style="display: inline-block" method="post">
+                <select id="subwayLine" style="font-size: 20px">
                     <option value="1호선">1호선</option>
                     <option value="2호선">2호선</option>
                     <option value="3호선">3호선</option>
@@ -28,8 +28,8 @@
                     <option value="우이신설선">우이신설선</option>
                 </select>
             </form>
-            <form style="display: inline-block; " >
-                <select style="font-size: 20px;">
+            <form style="display: inline-block">
+                <select style="font-size: 20px">
                     <option value="1">상행</option>
                     <option value="2">하행</option>
                 </select>
@@ -38,26 +38,18 @@
         <div class="subway-line1 lineNum_3"></div>
 
         <div class="subway-line-con lineNum_3">
-            <div class="line-info">
-                호선 정보
-            </div>
-            <div class="station-info">
-                현재 역
-            </div>
-            <div class="subway-num">
-                열차 번호
-            </div>
+            <div class="line-info">호선 정보</div>
+            <div class="station-info">현재 역</div>
+            <div class="subway-num">열차 번호</div>
         </div>
 
-        <div class="subway-line2 lineNum_3">
-            행선지
-        </div>
+        <div class="subway-line2 lineNum_3">행선지</div>
     </article>
     <div class="subway-time-info">
-        <div>조회 시간 : </div>
-        <div>지연 시간 : </div>
+        <div>조회 시간 :</div>
+        <div>지연 시간 :</div>
     </div>
-    <br>
+    <br />
     <!-- <form style="display: block;">
         <form>
             <label for="subwayLine">노선:</label>
@@ -88,4 +80,4 @@
         <div id="result"></div>
     </form> -->
 </main>
-<script src="Subway.js"></script>
+<!-- <script src="Subway.js"></script> -->
