--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -8,6 +8,14 @@ body {
     user-select: none;
 }
 
+img {
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
+}
+
 #map {
     position: relative;
     width: 100vw;
