--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -67,7 +67,9 @@
         <%- include('./__Info') %> <%- include('./__Explanation') %>
         <div id="map" style="z-index: 0"></div>
     </body>
-    <img src="subway_photo.jpg" id="image-display" class="hiddenMap" width="100%" height="100%">
+    <div id="image-container">
+        <img src="smap_sg_all.png" id="image-display" width="100%" height="auto">
+    </div>
     <script src="Main.js"></script>
 </html>
 
