--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="Main.css" />
         <link rel="stylesheet" href="help.css" />
         <link rel="stylesheet" href="explanation.css" />
+        <link rel="stylesheet" href="Subway.css" />
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsmoFLqupsLIZtJGrerrEuNkrnW_8NnCI&libraries=places"></script>
         <title>SKHU ROAD</title>
     </head>
@@ -67,7 +68,6 @@
         <%- include('./__Info') %> <%- include('./__Explanation') %>
         <div id="map" style="z-index: 0"></div>
     </body>
-    <img src="smap_sg_all.png" id="image-display" width="100%" height="100%">
+    <img src="smap_sg_all.png" id="image-display" width="100%" height="100%" />
     <script src="Main.js"></script>
 </html>
-
