--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -9,47 +9,40 @@
             <button class="search-btn" type="submi  t">검색</button>
         </div>
         <div class="subway-con">
-                <select id="SubwayLine" style="font-size: 20px" name="subwayLine">
-                    <option value="1호선">1호선</option>
-                    <option value="2호선">2호선</option>
-                    <option value="3호선">3호선</option>
-                    <option value="4호선">4호선</option>
-                    <option value="5호선">5호선</option>
-                    <option value="6호선">6호선</option>
-                    <option value="7호선">7호선</option>
-                    <option value="8호선">8호선</option>
-                    <option value="9호선">9호선</option>
-                    <option value="경의중앙선">경의중앙선</option>
-                    <option value="경춘선">경춘선</option>
-                    <option value="수인분당선">수인분당선</option>
-                    <option value="서해선">서해선</option>
-                    <option value="신분당선">신분당선</option>
-                    <option value="우이신설선">우이신설선</option>
-                </select>
-                <select id="updnLine" style="font-size: 20px" name="updnLine">
-                    <option value="1">상행</option>
-                    <option value="2">하행</option>
-                </select>
+            <select id="SubwayLine" style="font-size: 20px" name="subwayLine">
+                <option value="1호선">1호선</option>
+                <option value="2호선">2호선</option>
+                <option value="3호선">3호선</option>
+                <option value="4호선">4호선</option>
+                <option value="5호선">5호선</option>
+                <option value="6호선">6호선</option>
+                <option value="7호선">7호선</option>
+                <option value="8호선">8호선</option>
+                <option value="9호선">9호선</option>
+                <option value="경의중앙선">경의중앙선</option>
+                <option value="경춘선">경춘선</option>
+                <option value="수인분당선">수인분당선</option>
+                <option value="서해선">서해선</option>
+                <option value="신분당선">신분당선</option>
+                <option value="우이신설선">우이신설선</option>
+            </select>
+            <select id="updnLine" style="font-size: 20px" name="updnLine">
+                <option value="1">상행</option>
+                <option value="2">하행</option>
+            </select>
         </div>
     </form>
     <div id="resultSubway" class="resultSubway">
-        <div id="leftcon" class=""></div>
-        <div id="midcon" class="">
-            <div id=subwayId class="line-info">호선 정보</div>
-            <div id="stationNm" class="station-info">현재 역</div>
+        <div class="subway_img_group">
+            <div id="leftcon" class=""></div>
+            <div id="midcon" class="">
+                <div id="subwayId" class="line-info">호선 정보</div>
+                <div id="stationNm" class="station-info">현재 역</div>
+            </div>
+            <div id="ringthcon" class=""></div>
         </div>
-    
-
-        <div id="ringthcon" class=""></div>
-
-    <br>
-    <div class="subway-time-info">
-        
-        <div><span id="btrainNo"></span> <span id="bstatnNm"></span>행: <span id="arvlMsg2"></span></div>
-        <div >위치: <span id="position"></span> </div>
-        <div>지연정보 :<span id="delayinfo"></span></div>
+        <div class="subway_text_group"></div>
     </div>
-</div>
-    <br>
+    <br />
 </main>
 <script src="Subway.js"></script>
