지하철 노선도 이미지 출력 수정
지하철 버튼 클릭 했을 때만 지하철 노선도 이미지가 나오게 수정하였습니다.

--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -58,6 +58,10 @@
         <div>지연 시간 : </div>
     </div>
     <br>
+    <!-- <div class="tg">
+        <img src="smap_sg_all.png" id="image-display" class="photo" width="100%" height="100%">
+    </div>
+        <img src="smap_sg_all.png" id="image-display" width="100%" height="100%"> -->
     <!-- <form style="display: block;">
         <form>
             <label for="subwayLine">노선:</label>
