--- a/views/__Halfway.ejs
+++ b/views/__Halfway.ejs
@@ -9,32 +9,42 @@
             <label class="radio-label"> <input type="radio" name="option" value="library" />도서관 </label>
         </div>
     </div>
-    <div class="way-list">
+    <div>
         <header class="search-bar">
             <div class="con-search">
-                <img class="searchIcon" src="searchIcon.svg" alt="">
-                <input class="search-input" autocomplete="none" type="text" id="textInput" class="form-control"
-                    name="address" placeholder="지점 1">
-                <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기">
+                <img class="searchIcon" src="searchIcon.svg" alt="" />
+                <input
+                    class="search-input post_input_data"
+                    autocomplete="none"
+                    type="text"
+                    id="textInput"
+                    class="form-control"
+                    name="address"
+                    placeholder="지점 1"
+                />
+                <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" />
             </div>
             <button id="mid_btn" class="search-btn" type="button">찾기</button>
         </header>
-        <div class="con-search way">
-            <img class="searchIcon" src="searchIcon.svg" alt="">
-            <input class="search-input" autocomplete="none" type="text" id="textInput" class="form-control"
-                name="address" placeholder="지점 2">
-            <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기">
-        </div>
         <div class="search-bar">
             <div class="con-search way">
-                <img class="searchIcon" src="searchIcon.svg" alt="">
-                <input class="search-input" autocomplete="none" type="text" id="textInput" class="form-control"
-                    name="address" placeholder="지점 3">
-                <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기">
+                <img class="searchIcon" src="searchIcon.svg" alt="" />
+                <input
+                    class="search-input post_input_data"
+                    autocomplete="none"
+                    type="text"
+                    id="textInput"
+                    class="form-control"
+                    name="address"
+                    placeholder="지점 2"
+                />
+                <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" />
             </div>
-            <button id="" class="remove-btn" type="button">삭제</button>
+            <button id="" class="remove-btn remove-address" type="button">삭제</button>
         </div>
-        
+        <div class="way-list">
+
+        </div>
     </div>
     <button class="add-address" type="button">+</button>
 </main>
